# HotkeysSystem

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
contrib/Distribution/: HotkeysSystem.esp
contrib/Distribution/Config/: HotkeysSystem.yaml
contrib/Distribution/Interface/HotkeysSystem/: UIHS_Widget.swf
contrib/Distribution/Interface/HotkeysSystem/UIHS/: Alteration.dds  Arrow.dds  ArrowEnchanted.dds  Axe.dds  AxeEnchanted.dds  Background.dds  Battleaxe.dds  BattleaxeEnchanted.dds  Bolt.dds  BoltEnchanted.dds  Bow.dds  BowEnchanted.dds  Conjuration.dds  Crossbow.dds  CrossbowEnchanted.dds  Dagger.dds  DaggerEnchanted.dds  Destruction.dds  Drink.dds  Food.dds  Glove.dds  Greatsword.dds  GreatswordEnchanted.dds  Halberd.dds  Illusion.dds  Mace.dds  MaceEnchanted.dds  NULL.dds  Pike.dds  PikeEnchanted.dds  PotionBlank.dds  PotionHealth.dds  PotionMagicka.dds  PotionPoison.dds  PotionStamina.dds  Power.dds  Restoration.dds  Scroll.dds  Shield.dds  ShieldEnchanted.dds  (+9 more)
contrib/Distribution/Interface/translations/: HotkeysSystem_english.txt  HotkeysSystem_polish.txt  HotkeysSystem_russian.txt
contrib/Distribution/SKSE/Plugins/: HotkeysSystem.ini
contrib/Distribution/SKSE/Plugins/UIHS/: Widget.json
contrib/Distribution/Source/Scripts/: _HotkeysSystem_MCM.psc
flash/: UIHS_Widget.fla
flash/Script/: WidgetHolder.as
flash/com/greensock/plugins/core/: CharSet.as
include/: Actor.h  Config.h  Equipset.h  EquipsetManager.h  Event.h  ExtraData.h  HUDHandler.h  MCM.h  Offset.h  Papyrus.h  Utility.h  ViewHandler.h  WidgetHandler.h  header.h
include/Sample/: HitCounterManager.h
include/Scaleform/: WidgetMenu.h
src/: Actor.cpp  Actor.h  Config.cpp  Config.h  Data.cpp  Data.h  Equipment.cpp  Equipment.h  Equipset.cpp  Equipset.h  EquipsetManager.cpp  EquipsetManager.h  Event.cpp  ExtraData.cpp  ExtraData.h  HUDHandler.cpp  HUDHandler.h  HitCounterManager.cpp  MCM.cpp  Main.cpp  Offset.h  PCH.h  Papyrus.cpp  Papyrus.h  Render.cpp  Render.h  Serialize.cpp  Serialize.h  Translate.cpp  Translate.h  Utility.cpp  Utility.h  ViewHandler.cpp  WidgetHandler.cpp  WidgetHandler.h
src/Event/: Combat.cpp  Combat.h  Container.cpp  Container.h  Equip.cpp  Equip.h  Input.cpp  Input.h
src/Gui/: Cycle.cpp  Cycle.h  Draw.cpp  Draw.h  GuiMenu.cpp  GuiMenu.h  Normal.cpp  Normal.h  Potion.cpp  Potion.h
src/Scaleform/: Scaleform.cpp  Scaleform.h  WidgetMenu.cpp  WidgetMenu.h
swf/: UIHS_Widget.fla
swf/Script/: WidgetHolder.as
test/: HitCounterManager.cpp
